add swagger da controller compra
