# backend/src/resources/compra/compra.types.ts
@@ -1,0 +1,4 @@
+export interface ProdutoCarrinho {
+    id: string;
+    quantidade: number;
+}
