# backend/src/router/v1Router.ts
@@ -4,7 +4,7 @@ import produtoRouter from "../resources/produto/produto.router";
 import languageRouter from "../resources/linguagem/linguagem.router";
 import usuarioRouter from "../resources/usuario/usuario.router";
 import authRouter from "../resources/auth/auth.router";
-
+import compraRouter from "../resources/compra/compra.router";
 const router = Router();
 
 router.use(
@@ -12,7 +12,6 @@ router.use(
   // #swagger.tags = ['Auth']
   authRouter
 );
-
 router.use(
   "/produto",
   // #swagger.tags = ['Produto']
@@ -27,6 +26,11 @@ router.use(
   "/usuario",
   // #swagger.tags = ['Usuario']
   usuarioRouter
+);
+router.use(
+  "/compra",
+  // #swagger.tags = ['Compra']
+  compraRouter
 );
 
 export default router;
